--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:sKy9xdL5FztbeZMHjzZWSoVk54pgjTzCyQibJpmwFy0=
+APP_KEY=base64:yiaYvUw9sOd5opfrCs2jxe7tbd8mYKAszoEz6JJzp5k=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=jurnal_harian
+DB_DATABASE=jurnal
 DB_USERNAME=root
 DB_PASSWORD=
 
